fix:changed full name

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
                     <link rel="stylesheet" href="style.css">
           </head>
           <body>
-                    <h1>this is kamesh</h1>
+                    <h1>this is kamesh sankar</h1>
           </body>
 </html>
